[package]
name = "putio"
version = "0.1.0"
authors = ["bscott"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/putio"
repository = "https://github.com/bscott/putio-rs"
keywords = ["api", "putio"]
categories = ["api-bindings"]
exclude = ["rfcs/**/*", "/.travis.yml", ".github"]
description = """
A lightweight api client for Put.io V2 API
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0"